force-app/main/default/objects/Support_Tier__mdt/Support_Tier__mdt.object-meta.xml
<CustomObject>
    <label>Support Tier</label>
    <pluralLabel>Support Tiers</pluralLabel>
</CustomObject>