force-app/main/default/objects/Support_Tier__mdt/fields/Allowed_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Tickets__c</fullName>
    <label>Allowed Tickets</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>