force-app/main/default/objects/Support_Tier__mdt/fields/Entitlement_Process__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Process__c</fullName>
    <label>Entitlement Process</label>
    <length>200</length>
    <type>Text</type>
</CustomField>